--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -82,6 +82,8 @@
     "express": "^4.16.3",
     "heapdump": "^0.3.12",
     "http": "0.0.0",
+    "litecore-lib": "osagga/bitcore-lib#fix-regtest-v8",
+    "litecore-p2p": "^1.1.2",
     "lodash": "^4.17.11",
     "lru-cache": "^4.1.3",
     "mkdirp": "^0.5.1",
