--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -73,10 +73,12 @@
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
     "bitcore-client": "^8.2.0",
-    "bitcore-lib": "^8.2.0",
-    "bitcore-lib-cash": "^8.2.0",
     "bitcore-p2p": "^8.2.0",
     "bitcore-p2p-cash": "^8.2.0",
+    "bitcore-lib": "^8.2.0",
+    "bitcore-lib-cash": "^8.2.0",
+    "litecore-lib": "osagga/bitcore-lib#fix-regtest-v8",
+    "litecore-p2p": "^1.1.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
