--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -70,20 +70,23 @@
     "typescript-eslint-parser": "^15.0.0"
   },
   "dependencies": {
+    "@dashevo/dashcore-lib": "^0.17.2",
+    "@dashevo/dashcore-p2p": "^1.1.9",
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
     "bitcore-client": "^8.2.0",
-    "bitcore-p2p": "^8.2.0",
-    "bitcore-p2p-cash": "^8.2.0",
     "bitcore-lib": "^8.2.0",
     "bitcore-lib-cash": "^8.2.0",
-    "litecore-lib": "osagga/bitcore-lib#fix-regtest-v8",
-    "litecore-p2p": "^1.1.2",
+    "bitcore-p2p": "^8.2.0",
+    "bitcore-p2p-cash": "^8.2.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dashcore-lib": "^8.2.3",
     "express": "^4.16.3",
     "heapdump": "^0.3.12",
     "http": "0.0.0",
+    "litecore-lib": "osagga/bitcore-lib#fix-regtest-v8",
+    "litecore-p2p": "^1.1.2",
     "lodash": "^4.17.11",
     "lru-cache": "^4.1.3",
     "mkdirp": "^0.5.1",
