--- a/packages/bitcore-node/package.json
+++ b/packages/bitcore-node/package.json
@@ -70,6 +70,7 @@
     "typescript-eslint-parser": "^15.0.0"
   },
   "dependencies": {
+    "@dashevo/dashcore-lib": "^0.17.2",
     "@dashevo/dashcore-p2p": "^1.1.9",
     "JSONStream": "~1.3.1",
     "async": "^2.5.0",
@@ -83,6 +84,7 @@
     "express": "^4.16.3",
     "heapdump": "^0.3.12",
     "http": "0.0.0",
+    "litecore-lib": "osagga/bitcore-lib#fix-regtest-v8",
     "litecore-p2p": "^1.1.2",
     "lodash": "^4.17.11",
     "lru-cache": "^4.1.3",
